add placeholder models for indoor sound prediction

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -250,11 +250,11 @@ THE SOFTWARE.
                         <option value="jackhammer">Jackhammer</option>
                         <option value="siren">Siren</option>
                         <option value="street_music">Street music</option>
-                        <option value="kn">Knock (door, table)</option>
-                        <option value="ds">Door slam</option>
-                        <option value="st">Steps</option>
-                        <option value="cm">Chair moving</option>
-                        <option value="sp">Speech</option>
+                        <option value="knock">Knock (door, table)</option>
+                        <option value="door_slam">Door slam</option>
+                        <option value="steps">Steps</option>
+                        <option value="chair_moving">Chair moving</option>
+                        <option value="speech">Speech</option>
                     </select>
                     </form>
                 </fieldset>
