--- a/public_html/as.html
+++ b/public_html/as.html
@@ -80,14 +80,14 @@ THE SOFTWARE.
                         var rIdx = Object.keys(events[j].TFRidge); // ridge indexes
                         for (var i=0;i < rIdx.length; i++){
                             var f = events[j].TFRidge[rIdx[i]].freq;
-                            feat[i*2] = math.mean(f);
-                            feat[i*2+1] = math.std(f);
+                            feat[i] = math.mean(f);
+                            feat[i+5] = math.std(f);
                         }
                         for (var i=0;i< rIdx.length; i++){
                             var t = events[j].TFRidge[rIdx[i]].time;
                             var d = math.subtract(t,math.min(t)); // duration
-                            feat[model.mu.length/2+i*2] = math.mean(d);
-                            feat[model.mu.length/2+i*2+1] = math.std(d);
+                            feat[model.mu.length/2+i] = math.mean(d);
+                            feat[model.mu.length/2+i+5] = math.std(d);
                         }
                         // Use model to augment score
                         if (model){
