finish coding and debug the swarmboxes webapp

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -101,7 +101,7 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="as.html" class="wrapper1">
-                                                                                        <span class="text">Acoustic Search</span>
+                                                                                        <span class="text">Swarm Acoustic Search</span>
                                                                                         <img class="wrapper1" src="images/as.png" alt="">
                                                                                     </a>
                                                                             </div>
@@ -121,12 +121,15 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="vs.html" class="wrapper1">
-                                                                                        <span class="text">Video Search</span>
+                                                                                        <span class="text">Swarm Visual Search</span>
                                                                                         <img class="wrapper1" src="images/vs.png" alt="">
                                                                                     </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+                                                                                    <a href="swarmboxes.html" class="wrapper1">
+                                                                                        <span class="text">SwarmBoxes</span>
+                                                                                        <img class="wrapper1" src="images/swarmboxes.png" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                     </div>
                                                                     <div class="row">
