--- a/public_html/as.html
+++ b/public_html/as.html
@@ -79,14 +79,14 @@ THE SOFTWARE.
                             for (var i=0; i < model.mu.length; i++){
                                 feat.push(0);
                             }
-                            var rIdx = Object.keys(events[j].TFRidge); // ridge indexes
-                            for (var i=0;i < rIdx.length; i++){
-                                var f = events[j].TFRidge[rIdx[i]].freq;
+                            var rArr = Object.keys(events[j].TFRidge); // ridge indexes
+                            for (var i=0;i < rArr.length; i++){
+                                var f = events[j].TFRidge[rArr[i]].freq;
                                 feat[i] = math.mean(f);
                                 feat[i+5] = math.std(f);
                             }
-                            for (var i=0;i< rIdx.length; i++){
-                                var t = events[j].TFRidge[rIdx[i]].time;
+                            for (var i=0;i< rArr.length; i++){
+                                var t = events[j].TFRidge[rArr[i]].time;
                                 var d = math.subtract(t,math.min(t)); // duration
                                 feat[model.mu.length/2+i] = math.mean(d);
                                 feat[model.mu.length/2+i+5] = math.std(d);
