same as the previous commit

--- a/public_html/swarmboxes.html
+++ b/public_html/swarmboxes.html
@@ -36,7 +36,7 @@ THE SOFTWARE.
         <script src="js/illiad.min.js"></script>
         <script src="js/oms.min.js"></script>
         <script src="js/ping.js"></script>
-        <script src="http://www.geoplugin.net/javascript.gp"></script>
+        <script src="https://www.geoplugin.net/javascript.gp"></script>
 
         <script>
             //window.open("https://acoustic.ifp.illinois.edu:8081");
