rename from Illiad to SAS

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-            <title>Illiad</title>
+            <title>SAS</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -72,8 +72,8 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Illiad</h1>
-									<p>Illinois acoustic database</p>
+									<h1>SAS</h1>
+									<p>Swarm acoustic service</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -87,15 +87,15 @@
 									<h2>WebApps</h2>
 								</header>
 								<p>
-                                                                    The Illinois acoustic database (Illiad) service is an audio sensing 
-                                                                    service that supports historical and/or realtime processing.
-                                                                    The following web applications demonstrate the Illiad service.
+                                                                    The swarm acoustic service (SAS) service is an audio sensing 
+                                                                    service for the Internet of Things.
+                                                                    The following web applications demonstrate SAS.
 								</p>
 								<section>
                                                                     <div class="row">
                                                                             <div class="4u">
                                                                                 <a href="rtsosv.html" class="wrapper1">
-                                                                                    <span class="text">Realtime Sound on Street View (Required the IlliadClient Android app)</span>
+                                                                                    <span class="text">Realtime Sound on Street View (Required the SAS client app)</span>
                                                                                     <img class="wrapper1" src="images/47063_l.jpg" alt="">
                                                                                 </a>
                                                                             </div>
@@ -107,7 +107,7 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="wordcloud.html" class="wrapper1">
-                                                                                        <span class="text">Dynamic Word Cloud (Required the IlliadClient Android app)</span>
+                                                                                        <span class="text">Dynamic Word Cloud (Required the SAS client app)</span>
                                                                                         <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
                                                                                     </a>
                                                                             </div>
@@ -185,7 +185,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Copyright (c) 2014 <a href="https://sites.google.com/site/longle1illinois/home">Long Le</a>.</li><li>Design <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Copyright (c) 2014 <a href="https://sites.google.com/site/longle1illinois/home">Long Le</a>.</li><li>Supported by <a href="http://www.terraswarm.org/index.html">TerraSwarm</a></li>
 						</ul>
 					</div>
 		
