--- a/public_html/index.html
+++ b/public_html/index.html
@@ -95,7 +95,7 @@
                                                                     <div class="row">
                                                                             <div class="4u">
                                                                                 <a href="rtsosv.html" class="wrapper1">
-                                                                                    <span class="text">Realtime Sound on Street View (Required the SAS client app)</span>
+                                                                                    <span class="text">Realtime Sound on Street View (Required the SAS client)</span>
                                                                                     <img class="wrapper1" src="images/47063_l.jpg" alt="">
                                                                                 </a>
                                                                             </div>
@@ -107,7 +107,7 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="wordcloud.html" class="wrapper1">
-                                                                                        <span class="text">Dynamic Word Cloud (Required the SAS client app)</span>
+                                                                                        <span class="text">Dynamic Word Cloud (Required the SAS client)</span>
                                                                                         <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
                                                                                     </a>
                                                                             </div>
