--- a/public_html/as.html
+++ b/public_html/as.html
@@ -51,7 +51,7 @@ THE SOFTWARE.
              * 
              * @returns {none}
              */
-            function acousticSearch() {
+            var acousticSearch = function (){
                 var markers = oms.getMarkers();
                 for (var i = 0; i <markers.length;i++){
                     markers[i].setMap(null);
