retain the old Illiad name

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,8 +72,11 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>SAS</h1>
-									<p>Swarm acoustic service</p>
+									<h1>SAS (Illiad)</h1>
+									<p>
+                                                                            Swarm acoustic service<br>
+                                                                            (Illinois acoustic database)
+                                                                        </p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
