rename links to sensor and client

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,8 +62,8 @@
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Demo</span></a>
-						<a href="http://play.google.com/store/apps/details?id=com.longle1.spectrogram" class="icon fa-android"><span>Client</span></a>
-						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Accessor</span></a>
+						<a href="http://play.google.com/store/apps/details?id=com.longle1.spectrogram" class="icon fa-android"><span>Sensor</span></a>
+						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Client</span></a>
 					</nav>
 
 				<!-- Main -->
