rearrange the demos

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -97,10 +97,10 @@
 								<section>
                                                                     <div class="row">
                                                                             <div class="4u">
-                                                                                <a href="rtsosv.html" class="wrapper1">
-                                                                                    <span class="text">Realtime Sound on Street View (Required the SAS sensor)</span>
-                                                                                    <img class="wrapper1" src="images/47063_l.jpg" alt="">
-                                                                                </a>
+                                                                                    <a href="as_stream.html" class="wrapper1">
+                                                                                        <span class="text"> Streaming Swarm Acoustic Search</span>
+                                                                                        <img class="wrapper1" src="images/as.png" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="as.html" class="wrapper1">
@@ -109,10 +109,24 @@
                                                                                     </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="wordcloud.html" class="wrapper1">
-                                                                                        <span class="text">Dynamic Word Cloud (Required the SAS sensor)</span>
-                                                                                        <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
+                                                                                    <a href="vs.html" class="wrapper1">
+                                                                                        <span class="text">Swarm Visual Search</span>
+                                                                                        <img class="wrapper1" src="images/vs.png" alt="">
                                                                                     </a>
+                                                                            </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                            <div class="4u">
+                                                                                    <a href="swarmboxes.html" class="wrapper1">
+                                                                                        <span class="text">SwarmBoxes</span>
+                                                                                        <img class="wrapper1" src="images/swarmboxes.png" alt="">
+                                                                                    </a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
                                                                             </div>
                                                                     </div>
                                                                     <div class="row">
@@ -123,27 +137,17 @@
                                                                                     </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="vs.html" class="wrapper1">
-                                                                                        <span class="text">Swarm Visual Search</span>
-                                                                                        <img class="wrapper1" src="images/vs.png" alt="">
+                                                                                    <a href="wordcloud.html" class="wrapper1">
+                                                                                        <span class="text">Dynamic Word Cloud (Required the SAS sensor)</span>
+                                                                                        <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
                                                                                     </a>
+                                                                                    
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="swarmboxes.html" class="wrapper1">
-                                                                                        <span class="text">SwarmBoxes</span>
-                                                                                        <img class="wrapper1" src="images/swarmboxes.png" alt="">
+                                                                                    <a href="rtsosv.html" class="wrapper1">
+                                                                                        <span class="text">Realtime Sound on Street View (Required the SAS sensor)</span>
+                                                                                        <img class="wrapper1" src="images/47063_l.jpg" alt="">
                                                                                     </a>
-                                                                            </div>
-                                                                    </div>
-                                                                    <div class="row">
-                                                                            <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-                                                                            </div>
-                                                                            <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-                                                                            </div>
-                                                                            <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
                                                                             </div>
                                                                     </div>
 								</section>
