--- a/public_html/as.html
+++ b/public_html/as.html
@@ -43,6 +43,7 @@ THE SOFTWARE.
             var map;
             var oms;
             var iw;
+            var audioCtx = new AudioContext(); // should only have 1 per doc
             
             $(function(){
                 var gLoc = [$('#lat').val(), $('#lng').val()];
